fix: redirect HTTP to HTTPS via Caddy, proxy CURRI paths to Phoenix
Port 80 was mapped directly to Phoenix CURRI endpoint (4080), causing
users who type http://<ip>/ to get a 404 since CURRI has no route for /.

Now Caddy owns port 80: CURRI/XCC/phone-portal paths proxy to web:4080,
everything else redirects to HTTPS where the SPA lives.

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,16 @@
 # Caddyfile
+
+# HTTP: proxy CURRI/XCC/phone-portal paths to Phoenix, redirect everything else to HTTPS
+:80 {
+    @backend path /api/* /healthz /org/* /socket/* /live/*
+    handle @backend {
+        reverse_proxy web:4080
+    }
+    handle {
+        redir https://{host}{uri} permanent
+    }
+}
+
 :443 {
     reverse_proxy /api* web:4000
 
