fix: replace wget with curl in web healthcheck — wget not in production image
The web container's healthcheck used `wget -q --spider` but the production
Docker image (ubuntu:24.04 base) only has `curl` installed, causing permanent
(unhealthy) status with ExitCode 127 "wget: not found".

Switched to `curl -sf ... || exit 1` across docker-compose.yml and all 78
OVA version manifests.

--- a/ova/versions/0.8.4-rc144-promethus.yaml
+++ b/ova/versions/0.8.4-rc144-promethus.yaml
@@ -83,7 +83,7 @@ services:
         max-file: "7" # Keeps 7 days of logs
         compress: "true" # Compresses rotated files
     healthcheck:
-      test: ["CMD-SHELL", "wget -q --spider http://127.0.0.1:4080/healthz"]
+      test: ["CMD-SHELL", "curl -sf http://127.0.0.1:4080/healthz || exit 1"]
       interval: 30s
       timeout: 5s
       retries: 5
