feat: mount Docker socket into web container for container management
Adds /var/run/docker.sock volume mount and DOCKER_SOCKET env var to
the web service in the JTAPI overlay. Enables the Elixir API to
manage sibling containers via Docker Engine API.

--- a/docker-compose-jtapi.yml
+++ b/docker-compose-jtapi.yml
@@ -22,7 +22,11 @@
 
 services:
   web:
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
+      # Docker Engine API — enables container management from the web UI
+      - DOCKER_SOCKET=/var/run/docker.sock
       # JTAPI direct mode — API talks to sidecar gRPC without K8s operator
       - JTAPI_MODE=direct
       - JTAPI_SIDECAR_ENDPOINT=jtapi-sidecar:50051
